config updated, app-task added

--- a/my-pomodoro/src/app/app-config/app.config.html
+++ b/my-pomodoro/src/app/app-config/app.config.html
@@ -1,26 +1,37 @@
-<section class="row">
-    <div class="input-group mb-3 col col">
-        <div class="input-group-prepend">
-            <label class="input-group-text" for="startTime">Start Time</label>
+<section class="mb-5">
+    <div class="row mb-3 ">
+        <div class="input-group mb-3 col">
+            <div class="input-group-prepend">
+                <label class="input-group-text" for="startTime">Start Time</label>
+            </div>
+            <input name="startTime" id="startTime" class="form-control" placeholder="{{startTime}}" type="number" min="10" max="25" [(ngModel)]="startTime">
         </div>
-        <input name="startTime" id="startTime" class="form-control" placeholder="{{startTime}}" type="number">
+        <div class="input-group mb-3 col">
+            <div class="input-group-prepend">
+                <label class="input-group-text" for="shortBreakTime">Short Break Time</label>
+            </div>
+            <input name="shortBreakTime" id="shortBreakTime" class="form-control" placeholder="{{shortBreakTime}}" type="number" min="1" max="5" [(ngModel)]="shortBreakTime">
+        </div>
+        <div class="input-group mb-3 col">
+            <div class="input-group-prepend">
+                <label class="input-group-text" for="largeBreakTime">Large Break Time</label>
+            </div>
+            <input name="largeBreakTime" id="largeBreakTime" class="form-control" placeholder="{{largeBreakTime}}" type="number" min="10" max="20" [(ngModel)]="largeBreakTime">
+        </div>
+        <div class="input-group mb-3 col">
+            <div class="input-group-prepend">
+                <label class="input-group-text" for="breakInterval">Long Break Interval</label>
+            </div>
+            <input name="breakInterval" id="breakInterval" class="form-control" placeholder="{{breakInterval}}" type="number" min="1" max="5" [(ngModel)]="breakInterval">
+        </div>
     </div>
-    <div class="input-group mb-3 col">
-        <div class="input-group-prepend">
-            <label class="input-group-text" for="shortBreakTime">Short Break Time</label>
+    
+    <div class="row mb-3  justify-content-center">
+        <div class="input-group col-3">
+            <button type="button" class="btn btn-secondary" (click)="setPomodoro.emit()">Set</button>
         </div>
-        <input name="shortBreakTime" id="shortBreakTime" class="form-control" placeholder="{{shortBreakTime}}" type="number">
-    </div>
-    <div class="input-group mb-3 col">
-        <div class="input-group-prepend">
-            <label class="input-group-text" for="largeBreakTime">Large Break Time</label>
+        <div class="input-group col-3">
+            <button type="button" class="btn btn-primary" (click)="setPomodoro.emit()">Save</button>
         </div>
-        <input name="largeBreakTime" id="largeBreakTime" class="form-control" placeholder="{{largeBreakTime}}" type="number">
-    </div>
-    <div class="input-group mb-3 col">
-        <div class="input-group-prepend">
-            <label class="input-group-text" for="intervalBreaks">Interval Breaks</label>
-        </div>
-        <input name="intervalBreaks" id="intervalBreaks" class="form-control" placeholder="{{intervalBreaks}}" type="number">
     </div>
 </section>
