--- a/my-pomodoro/src/app/app.component.html
+++ b/my-pomodoro/src/app/app.component.html
@@ -42,6 +42,7 @@
     <section class="container">
       <app-config></app-config>
       <app-pomodoro></app-pomodoro>
+      <app-task></app-task>
     </section>
   </main>
 </body>
