--- a/my-pomodoro/src/app/app-pomodoro/app.pomodoro.html
+++ b/my-pomodoro/src/app/app-pomodoro/app.pomodoro.html
@@ -1,4 +1,4 @@
-<section class="row">
+<section class="row mb-5">
     <div class="col">
         <header>
             <h2>time</h2>
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col"><button type="button" class="btn btn-success">Start</button></div>
             <div class="col"><button type="button" class="btn btn-danger">Stop</button></div>
-            <div class="col"><button type="button" class="btn btn-secondary">Reset</button></div>
+            <div class="col"><button type="button" class="btn btn-info">Reset</button></div>
         </div>
     </div>
 </section>
