--- a/my-pomodoro/src/app/app-pomodoro/app.pomodoro.html
+++ b/my-pomodoro/src/app/app-pomodoro/app.pomodoro.html
@@ -1,14 +1,5 @@
-<section class="row mb-5">
-    <div class="col">
-        <header>
-            <h2>time</h2>
-        </header>
-    </div>
-    <div class="col">
-        <div class="row">
-            <div class="col"><button type="button" class="btn btn-success">Start</button></div>
-            <div class="col"><button type="button" class="btn btn-danger">Stop</button></div>
-            <div class="col"><button type="button" class="btn btn-info">Reset</button></div>
-        </div>
-    </div>
-</section>
+<div class="container">
+    <app-clock></app-clock>
+    <app-config></app-config>
+    <app-task></app-task>
+</div>
