--- a/my-pomodoro/src/app/app-config/app.config.html
+++ b/my-pomodoro/src/app/app-config/app.config.html
@@ -1,4 +1,7 @@
 <section class="mb-5">
+    <div>
+        <h2>{{clicked}}</h2>
+    </div>
     <div class="row mb-3">
         <div class="form-group col-12 mb-1">
             <input name="pomodoroName" id="pomodoroName" class="form-control" type="text" placeholder="Pomodoro" [(ngModel)]="pomodoroConfig.pomodoroName">
