--- a/my-pomodoro/src/app/app-task/app.task.html
+++ b/my-pomodoro/src/app/app-task/app.task.html
@@ -1,6 +1,8 @@
 <section>
     <h2>Tasks</h2>
-    <div></div>
+    <div>
+        {{changes}}
+    </div>
     <h2>Done</h2>
     <div></div>
 </section>
