--- a/my-pomodoro/src/app/app.component.html
+++ b/my-pomodoro/src/app/app.component.html
@@ -4,5 +4,5 @@
     (setPomodoro)="setPomodoroData($event)"
     (savePomodoro)="savePomodoroData($event)"
   ></app-config>
-  <app-task [taskSaved]="saveConfig"></app-task>
+  <app-task [tasks]="tasks"></app-task>
 </div>
