--- a/my-pomodoro/src/app/app.component.html
+++ b/my-pomodoro/src/app/app.component.html
@@ -1,8 +1,9 @@
 <div class="container">
-  <app-clock></app-clock>
+  <app-clock [setConfig]="setConfig"></app-clock>
   <app-config 
     (setPomodoro)="setPomodoroData($event)"
     (savePomodoro)="savePomodoroData($event)"
+    (setConfigClock)="setPomodoroData($event)"
   ></app-config>
   <app-task [tasks]="tasks"></app-task>
 </div>
