--- a/my-pomodoro/src/app/app-config/app.config.html
+++ b/my-pomodoro/src/app/app-config/app.config.html
@@ -17,9 +17,9 @@
         </div>
         <div class="input-group mb-3 col">
             <div class="input-group-prepend">
-                <label class="input-group-text" for="largeBreakTime">Large Break Time</label>
+                <label class="input-group-text" for="longBreakTime">Large Break Time</label>
             </div>
-            <input name="largeBreakTime" id="largeBreakTime" class="form-control" type="number" min="10" max="20" [(ngModel)]="pomodoroConfig.largeBreakTime">
+            <input name="longBreakTime" id="longBreakTime" class="form-control" type="number" min="10" max="20" [(ngModel)]="pomodoroConfig.longBreakTime">
         </div>
         <div class="input-group mb-3 col">
             <div class="input-group-prepend">
