--- a/my-pomodoro/src/app/app-task/app.task.html
+++ b/my-pomodoro/src/app/app-task/app.task.html
@@ -5,7 +5,7 @@
             <li>{{task.pomodoroName}}</li>
             <li>{{task.startTime}}</li>
             <li>{{task.shortBreakTime}}</li>
-            <li>{{task.largeBreakTime}}</li>
+            <li>{{task.longBreakTime}}</li>
             <li>{{task.breakInterval}}</li>
             <li>{{task.isDone}}</li>
         </ul>
