--- a/my-pomodoro/src/app/app-clock/app.clock.html
+++ b/my-pomodoro/src/app/app-clock/app.clock.html
@@ -29,7 +29,7 @@
         <div class="col">
             <div class="row">
                 <div class="col"><button type="button" class="btn btn-success" (click)="startPauseTimer()">{{isTimerPause ? "Start" : "Pause"}}</button></div>
-                <div class="col"><button type="button" class="btn btn-danger" (click)="stopTimer()">Stop</button></div>
+                <div class="col"><button type="button" class="btn btn-danger" (click)="stopTimer(setConfig.startTime)">Stop</button></div>
             </div>
         </div>
     </div>
