--- a/my-pomodoro/src/app/app-clock/app.clock.html
+++ b/my-pomodoro/src/app/app-clock/app.clock.html
@@ -23,13 +23,41 @@
         </ul>
     </div>
     <div class="col">
-        <div>
-            <h2>{{mmLeft}} : {{ssLeft}}</h2>
+        <div class="card mb-5">
+            <div class="card-header text-center">
+                {{modalTitle}}
+            </div>
+            <h1 class="text-center mt-5 mb-5">{{mmLeft}} : {{ssLeft}}</h1>
         </div>
         <div class="col">
             <div class="row">
-                <div class="col"><button type="button" class="btn btn-success" (click)="startPauseTimer()">{{isTimerPause ? "Start" : "Pause"}}</button></div>
-                <div class="col"><button type="button" class="btn btn-danger" (click)="stopTimer(setConfig.startTime)">Stop</button></div>
+                <div class="col text-center"><button type="button" class="btn btn-success"
+                        (click)="startPauseTimer()">{{isTimerPause ? "Start" : "Pause"}}</button></div>
+                <div class="col text-center"><button type="button" class="btn btn-danger"
+                        (click)="stopTimer(setConfig.startTime)">Stop</button></div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Button trigger modal -->
+    <button [hidden]="true" type="button" class="btn btn-primary" data-toggle="modal" data-target="#messageModal" #messageModal></button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="messageModal" tabindex="-1" aria-labelledby="messageModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="messageModalLabel">{{modalTitle}}</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    {{modalMessage}}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
             </div>
         </div>
     </div>
