--- a/my-pomodoro/src/app/app-task/app.task.html
+++ b/my-pomodoro/src/app/app-task/app.task.html
@@ -1,15 +1,136 @@
 <section>
-    <h2>Tasks</h2>
-    <div>
-        <ul *ngFor="let task of tasks" (click)="setClock(task)">
-            <li>{{task.pomodoroName}}</li>
-            <li>{{task.startTime}}</li>
-            <li>{{task.shortBreakTime}}</li>
-            <li>{{task.longBreakTime}}</li>
-            <li>{{task.breakInterval}}</li>
-            <li>{{task.isDone}}</li>
-        </ul>
+    <h2 class="mt-5 mb-5">Tasks</h2>
+    <div class="accordion" id="tasks">
+        <div *ngFor="let task of tasks; index as i;">
+            <div class="card" *ngIf="!task.isDone">
+                <div class="card-header" id="{{task.pomodoroName+i}}">
+                    <h2 class="mb-0">
+                        <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse"
+                            [attr.data-target]="'#collapse'+i" aria-expanded="true" [attr.aria-controls]="'collapse'+i">
+                            {{task.pomodoroName}}
+                        </button>
+                    </h2>
+                </div>
+
+                <div [attr.id]="'collapse'+i" class="collapse show" aria-labelledby="{{task.pomodoroName}}"
+                    data-parent="#tasks">
+                    <div class="card-body">
+                        <div class="row mb-3">
+                            <div class="form-group col-12 mb-1">
+                                <input name="task.pomodoroName" id="task.pomodoroName" class="form-control" type="text"
+                                    placeholder="Pomodoro" [(ngModel)]="task.pomodoroName">
+                            </div>
+                            <div class="input-group mb-3 col">
+                                <div class="input-group-prepend">
+                                    <label class="input-group-text" for="task.startTime">Start Time</label>
+                                </div>
+                                <input name="task.startTime" id="task.startTime" class="form-control" type="number"
+                                    min="10" max="25" [(ngModel)]="task.startTime">
+                            </div>
+                            <div class="input-group mb-3 col">
+                                <div class="input-group-prepend">
+                                    <label class="input-group-text" for="task.shortBreakTime">Short Break Time</label>
+                                </div>
+                                <input name="task.shortBreakTime" id="task.shortBreakTime" class="form-control"
+                                    type="number" min="1" max="5" [(ngModel)]="task.shortBreakTime">
+                            </div>
+                            <div class="input-group mb-3 col">
+                                <div class="input-group-prepend">
+                                    <label class="input-group-text" for="task.longBreakTime">Long Break Time</label>
+                                </div>
+                                <input name="task.longBreakTime" id="task.longBreakTime" class="form-control"
+                                    type="number" min="10" max="20" [(ngModel)]="task.longBreakTime">
+                            </div>
+                            <div class="input-group mb-3 col">
+                                <div class="input-group-prepend">
+                                    <label class="input-group-text" for="task.breakInterval">Long Break Interval</label>
+                                </div>
+                                <input name="task.breakInterval" id="task.breakInterval" class="form-control"
+                                    type="number" min="1" max="5" [(ngModel)]="task.breakInterval">
+                            </div>
+                        </div>
+
+                        <div class="row mb-3 justify-content-center">
+                            <div class="input-group col">
+                                <button type="button" class="btn btn-secondary" (click)="setClock(task)">Set</button>
+                            </div>
+                            <div class="input-group col">
+                                <button type="button" class="btn btn-primary" (click)="saveTask(task, i)">Save</button>
+                            </div>
+                            <div class="input-group col">
+                                <button type="button" class="btn btn-danger" (click)="removeTask(i)">Remove</button>
+                            </div>
+                            <div class="input-group col">
+                                <button type="button" class="btn btn-info" (click)="markAsDone(i)">Done</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <h2>Done</h2>
-    <div></div>
+    <h2 class="mt-5 mb-5">Done</h2>
+    <div class="accordion" id="doneTasks">
+        <div *ngFor="let task of tasks; index as i;">
+            <div class="card" *ngIf="task.isDone">
+                <div class="card-header" id="{{task.pomodoroName+i}}">
+                    <h2 class="mb-0">
+                        <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse"
+                            [attr.data-target]="'#collapse'+i" aria-expanded="true" [attr.aria-controls]="'collapse'+i">
+                            {{task.pomodoroName}}
+                        </button>
+                    </h2>
+                </div>
+
+                <div [attr.id]="'collapse'+i" class="collapse show" aria-labelledby="{{task.pomodoroName}}"
+                    data-parent="#doneTasks">
+                    <div class="card-body">
+                        <div class="row mb-3">
+                            <div class="form-group col-12 mb-1">
+                                <input name="task.pomodoroName" id="task.pomodoroName" class="form-control" type="text"
+                                    placeholder="Pomodoro" [(ngModel)]="task.pomodoroName">
+                            </div>
+                            <div class="input-group mb-3 col">
+                                <div class="input-group-prepend">
+                                    <label class="input-group-text" for="task.startTime">Start Time</label>
+                                </div>
+                                <input name="task.startTime" id="task.startTime" class="form-control" type="number"
+                                    min="10" max="25" [(ngModel)]="task.startTime">
+                            </div>
+                            <div class="input-group mb-3 col">
+                                <div class="input-group-prepend">
+                                    <label class="input-group-text" for="task.shortBreakTime">Short Break Time</label>
+                                </div>
+                                <input name="task.shortBreakTime" id="task.shortBreakTime" class="form-control"
+                                    type="number" min="1" max="5" [(ngModel)]="task.shortBreakTime">
+                            </div>
+                            <div class="input-group mb-3 col">
+                                <div class="input-group-prepend">
+                                    <label class="input-group-text" for="task.longBreakTime">Long Break Time</label>
+                                </div>
+                                <input name="task.longBreakTime" id="task.longBreakTime" class="form-control"
+                                    type="number" min="10" max="20" [(ngModel)]="task.longBreakTime">
+                            </div>
+                            <div class="input-group mb-3 col">
+                                <div class="input-group-prepend">
+                                    <label class="input-group-text" for="task.breakInterval">Long Break Interval</label>
+                                </div>
+                                <input name="task.breakInterval" id="task.breakInterval" class="form-control"
+                                    type="number" min="1" max="5" [(ngModel)]="task.breakInterval">
+                            </div>
+                        </div>
+
+                        <div class="row mb-3 justify-content-center">
+                            <div class="input-group col">
+                                <button type="button" class="btn btn-primary" (click)="saveTask(task, i)">Reset</button>
+                            </div>
+                            <div class="input-group col">
+                                <button type="button" class="btn btn-danger" (click)="removeTask(i)">Remove</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
