--- a/my-pomodoro/src/app/app-config/app.config.html
+++ b/my-pomodoro/src/app/app-config/app.config.html
@@ -30,10 +30,10 @@
     </div>
     
     <div class="row mb-3 justify-content-center">
-        <div class="input-group col-3">
+        <div class="input-group col">
             <button type="button" class="btn btn-secondary" (click)="emitSetPomodoro()">Set</button>
         </div>
-        <div class="input-group col-3">
+        <div class="input-group col">
             <button type="button" class="btn btn-primary" (click)="emitSavePomodoro();">Save</button>
         </div>
     </div>
